<resources>
    <string name="app_name">JoeToGo</string>
    <string name="sign_in_text"><u>Sign In</u></string>
    <string name="sign_up_text"><u>Sign Up</u></string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_in_title">Sign In</string>
    <string name="username_hint">username</string>
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="already_registered_text">Already Registered?</string>
    <string name="not_registered_text">Not Registered?</string>
    <string name="coffee_cup_transparent">transparent logo</string>
    <string name="coffee_cup_colour">coloured logo</string>

    <!-- nav bar -->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!-- header -->
    <string name="header_title">JoeToGo</string>
    <string name="header_contact">contact@joetogo.com</string>

    <!-- Home fragment -->
    <string name="home_greeting">Welcome to your local Joe!</string>
    
    <!-- Item card -->
    <string name="add_cart">Add to Cart</string>
    <string name="remove_cart">Remove from Cart</string>
    
    <!-- About -->
    <string name="about_us_text">At JoeToGo, we are passionate about providing the best coffee in town.
        Our journey began 627 B.C.E when we set out to find coffee.
        Our commitment to quality starts with sourcing the finest coffee beans from around the galaxy,
        using only ethical sourcing. We roast them with care to bring out their unique flavors,
        ensuring every cup is a delightful experience. Yum.
        But it\'s not just about the coffee; it's about the community we've built.
        We welcome you to join us, relax, work, or meet with friends in our cozy cave under a rock.
        Your satisfaction is our top priority, and we can't wait to serve you the perfect cup of hot bean juice.
        Thank you for choosing JoeToGo. Your support fuels our relentless passion,
        and we look forward to sharing many more cups of great ground water.</string>

    <!-- Email -->
    <string name="contact_text">Feel free to reach out to us anytime with your questions,
        feedback, or just to say hello. We love hearing from our customers!</string>

</resources>